--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,5 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 //    implementation project(path: ':stble')
-    implementation fileTree(dir: 'src\\main\\libs', include: ['*.aar', '*.jar'], exclude: [])
-
+    implementation files('stble.jar')
 }
